<resources>
    <string name="app_name">Chatopia</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="next">Next</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="number">Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="Profile">\n</string>
</resources>